# gesture_rt

./: .gitignore  ANDROID_ROADMAP.md  ARCHITECTURE_CROSSPLATFORM.md  CROSSPLATFORM_SUMMARY.md  Cargo.toml  EXTERNAL_TASKS.md  IMPLEMENTATION_CHECKLIST.md  PHASE_1_COMPLETE.md  PRODUCTION_ARCHITECTURE_IMPLEMENTATION.md  README.md  README_ARCHITECTURE.md  TRAINING_GUIDE.md  Todo.md  build.rs  check_output.txt
benches/: latency.rs
examples/: camera_smoke.rs  full_pipeline.rs  onnx_infer.rs  onnx_pipeline.rs
native/: mediapipe_bridge.md
scripts/: inspect_models.py  inspect_task.py
src/: main.rs
src/core/: event_bus.rs  mod.rs  plugin_loader.rs  runtime.rs  scheduler.rs  state_manager.rs
src/dsl/: mod.rs
src/dsl/interpreter/: mod.rs
src/dsl/lexer/: mod.rs
src/dsl/parser/: mod.rs
src/dsl/stdlib/: mod.rs
src/gestures/: fsm.rs  mod.rs  session.rs
src/gestures/classifiers/: fist.rs  mod.rs  pinch.rs  swipe.rs
src/gestures/confidence/: fuser.rs  mod.rs
src/gestures/gesture_graph/: mod.rs
src/gestures/temporal_engine/: mod.rs
src/platform/: action.rs  adapter.rs  android.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/runtime_dispatch/: mod.rs
src/runtime_dispatch/keyboard/: linux.rs  macos.rs  mod.rs  windows.rs
src/runtime_dispatch/media/: mod.rs
src/runtime_dispatch/mouse/: linux.rs  macos.rs  mod.rs  windows.rs
src/runtime_dispatch/os_hooks/: mod.rs
src/spatial/: coordinate_system.rs  depth.rs  features.rs  kinematics.rs  mod.rs  normalization.rs  orientation.rs  spatial_state.rs
src/spatial/filters/: kalman.rs  mod.rs  one_euro.rs
src/spatial/prediction/: mod.rs
src/tests/: gesture_tests.rs  intergration.rs  kalman_tests.rs  projection_tests.rs
src/ui/: mod.rs
src/ui/calibration/: mod.rs
src/ui/overlay/: mod.rs
src/ui/visualization/: mod.rs
src/vision/: mod.rs
src/vision/camera/: capture.rs  mod.rs  platform.rs
src/vision/depth_estimation/: mod.rs
src/vision/landmarks/: extractor.rs  gesture_classifier.rs  mediapipe_adapter.rs  mediapipe_bridge.rs  mod.rs  normalization.rs  onnx_extractor.rs  tracker.rs
src/vision/normalization/: mod.rs
src/vision/projection/: mod.rs
