[package]
name = "gesture_rt"
version = "0.1.0"
edition = "2021"
authors = ["GestureRT Team"]
description = "Real-time spatial gesture recognition runtime"
license = "MIT OR Apache-2.0"

[features]
default = ["camera", "mediapipe", "dispatch"]
camera = []
mediapipe = []
onnx = []
dispatch = []
plugin_system = []  # Phase 2
depth_estimation = []  # Phase 3
dsl = []  # Phase 3

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-channel = "2.1"

# Math
nalgebra = "0.32"
libm = "0.2"

# Vision - using default OpenCV (no specific version feature)
opencv = { version = "0.76", features = ["buildtime-bindgen"] }
onnxruntime = { version = "0.17", optional = true }

# Time
coarsetime = "0.1"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# OS dispatch (MVP: cross-platform, will specialize later)
enigo = { version = "0.2", features = ["serde"] }

# UI for overlay/calibration (MVP minimal)
tauri = { version = "1.5", optional = true }

# Development
[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bin]]
name = "gesture_rt"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[dependencies.onnxruntime]
version = "0.17"
optional = true